--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.devtools.restart.enabled=true
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix= classpath:/templates
-server.servlet.context-path=/
+server.servlet.context-path=/LotteON
 
 # 멀티파트 설정
 spring.servlet.multipart.location=src/main/resources/static/images/product
