--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 ##################################
 # ?? Setting
 ##################################
@@ -32,6 +31,11 @@ spring.datasource.password=Qq12345!
 #spring.datasource.username=scott
 #spring.datasource.password=tiger
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+##########################
+# mybatis 설정
+##########################
+mybatis.mapper-locations= classpath:mappers/**/*.xml
 
 ##################################
 # JPA ??
