--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>Lotte-Market</groupId>
 	<artifactId>Lotte-Market</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
+	<version>0.0.6-SNAPSHOT</version>
 	<name>Lotte-Market</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -110,7 +110,13 @@
 		    <version>3.1.1</version>
 		</dependency>
 
-		
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+	<dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	    <version>2.10.1</version>
+	</dependency>
+
 		
 	
 	</dependencies>
