--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.devtools.restart.enabled=true
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix= classpath:/templates
-server.servlet.context-path=/
+server.servlet.context-path=/LotteON
 
 # ë©í°íí¸ ì¤ì 
 spring.servlet.multipart.location=src/main/resources/static/images/product
@@ -49,14 +49,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=update
-
-
-###########################################################
-#Mybatis 설정
-###########################################################
-mybatis.mapper-locations=classpath:/mappers/**/*.xml
-
-
 spring.security.user.name=user
 spring.security.user.password=1234
 ##################################
