--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.datasource.url=jdbc:mysql://3.34.47.106:3306/UserDB
 spring.datasource.username=test1
 spring.datasource.password=Qq12345!
 
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/UserDB
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/LotteOn
 #spring.datasource.username=root
-#spring.datasource.password=root
+#spring.datasource.password=Ltjdcks@96
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##################################
