--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,14 +15,14 @@ spring.servlet.multipart.max-file-size=10MB
 ##################################
 # DataSource ??(MySql)
 ##################################
-spring.datasource.url=jdbc:mysql://3.34.47.106:3306/UserDB
-spring.datasource.username=test1
-spring.datasource.password=Qq12345!
+#spring.datasource.url=jdbc:mysql://3.34.47.106:3306/UserDB
+#spring.datasource.username=test1
+#spring.datasource.password=Qq12345!
 
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/UserDB
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/UserDB
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##################################
 # DataSource ??(Oracle)
