--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,13 @@ spring.servlet.multipart.max-file-size=10MB
 #spring.datasource.username=test1
 #spring.datasource.password=Qq12345!
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/UserDB
+spring.datasource.url=jdbc:mysql://13.209.73.35:3306/lotteOn
 spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=Ltjdcks@96
+
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/lotteOn
+#spring.datasource.username=root
+#spring.datasource.password=1234
 
 ##########################
 # mybatis 설정
