--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.devtools.restart.enabled=true
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix= classpath:/templates
-server.servlet.context-path=/
+server.servlet.context-path=/LotteON
 
 # ë©í°íí¸ ì¤ì 
 spring.servlet.multipart.location=src/main/resources/static/images/product
