--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.devtools.restart.enabled=true
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix= classpath:/templates
-server.servlet.context-path=/LotteON
+server.servlet.context-path=/
 
 # ë©í°íí¸ ì¤ì 
 spring.servlet.multipart.location=src/main/resources/static/images/product
@@ -15,9 +15,9 @@ spring.servlet.multipart.max-file-size=10MB
 ##################################
 # DataSource ??(MySql)
 #######################
-spring.datasource.url=jdbc:mysql://3.34.47.106:3306/UserDB
-spring.datasource.username=test1
-spring.datasource.password=Qq12345!
+spring.datasource.url=jdbc:mysql://13.209.87.100:3306/lotteOn
+spring.datasource.username=root
+spring.datasource.password=Qwer2179!@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##########################
