--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+# .gitignore
+
+# Ignore application.properties file
+/src/main/resources/application.properties
