--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.servlet.multipart.max-file-size=10MB
 ##################################
 # DataSource ??(MySql)
 #######################
-spring.datasource.url=jdbc:mysql://3.34.46.165:3306/lotteOn
-spring.datasource.username=root
-spring.datasource.password=Qwer2179!@
+spring.datasource.url=jdbc:mysql://3.34.47.106:3306/UserDB
+spring.datasource.username=test1
+spring.datasource.password=Qq12345!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
