--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.thymeleaf.prefix= classpath:/templates
 server.servlet.context-path=/LotteON
 
 # ë©í°íí¸ ì¤ì 
-spring.servlet.multipart.location=product/
+spring.servlet.multipart.location=thumb1/
 spring.servlet.multipart.max-file-size=10MB
 
 ##################################
@@ -19,6 +19,10 @@ spring.datasource.username=test1
 spring.datasource.password=Qq12345!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#spring.datasource.url=jdbc:mysql://3.37.127.212:3306/lotteOn
+#spring.datasource.username=root
+#spring.datasource.password=Ltjdcks@96
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##########################
 # mybatis 설정
@@ -36,7 +40,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.security.user.name=user
 spring.security.user.password=1234
 ##################################
