--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,12 @@ spring.servlet.multipart.max-file-size=10MB
 #spring.datasource.url=jdbc:mysql://3.34.46.165:3306/lotteOn
 #spring.datasource.username=root
 #spring.datasource.password=Qwer2179!@
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Drive
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/userdb
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##########################
 # mybatis 설정
@@ -57,7 +62,7 @@ spring.mail.username=hansan9611@gmail.com
 spring.mail.password=cdcelknzyvxywzqb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
-# 와 smtp.gmail.com으로 입력해줘야 인증번호 발송된다!
+# smtp.gmail.com으로 입력해줘야 인증번호 발송된다!
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com 
 spring.mail.properties.mail.smtp.starttls.enable=true
 
