--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,16 @@
 	    <artifactId>gson</artifactId>
 	    <version>2.10.1</version>
 	</dependency>
+	
+		<!-- JavaMailSender -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mail</artifactId>
+		    <version>3.0.0</version>
+		</dependency>
+
+
 
 		
 	
