--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix= classpath:/templates
-server.servlet.context-path=/
+server.servlet.context-path=/LotteON
 spring.servlet.multipart.location=thumb1/
 spring.servlet.multipart.max-file-size=10MB
 
