--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,12 @@ spring.datasource.username=test1
 spring.datasource.password=Qq12345!
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/UserDB
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.datasource.hikari.maximum-pool-size=20
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ##########################
 # mybatis 설정
 ##########################
