--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix= classpath:/templates
-server.servlet.context-path=/LotteON
+server.servlet.context-path=/
 spring.servlet.multipart.location=thumb1/
 spring.servlet.multipart.max-file-size=10MB
 
@@ -18,11 +18,6 @@ spring.datasource.password=Qq12345!
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/UserDB
-#spring.datasource.username=root
-#spring.datasource.password=1234
-#spring.datasource.hikari.maximum-pool-size=20
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ##########################
 # mybatis 설정
 ##########################
