--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.thymeleaf.prefix= classpath:/templates
 server.servlet.context-path=/LotteON
 spring.servlet.multipart.location=thumb1/
 spring.servlet.multipart.max-file-size=10MB
-
+server.port = 8000
 ##################################
 # DataSource(MySql)
 #######################
